--- a/Gráficas de Proyecto Aula(Individual)/morris.js-0.5.1/examples/non-date.html
+++ b/Gráficas de Proyecto Aula(Individual)/morris.js-0.5.1/examples/non-date.html
@@ -14,16 +14,16 @@
 <div id="graph"></div>
 <pre id="code" class="prettyprint linenums">
 var day_data = [
-  {"elapsed": "I", "value": 34},
-  {"elapsed": "II", "value": 24},
-  {"elapsed": "III", "value": 3},
-  {"elapsed": "IV", "value": 12},
-  {"elapsed": "V", "value": 13},
-  {"elapsed": "VI", "value": 22},
-  {"elapsed": "VII", "value": 5},
-  {"elapsed": "VIII", "value": 26},
-  {"elapsed": "IX", "value": 12},
-  {"elapsed": "X", "value": 19}
+  {x: "I", "value": 34},
+  {x: "II", "value": 24},
+  {x: "III", "value": 3},
+  {x: "IV", "value": 12},
+  {x: "V", "value": 13},
+  {x: "VI", "value": 22},
+  {x: "VII", "value": 5},
+  {x: "VIII", "value": 26},
+  {x: "IX", "value": 12},
+  {x: "X", "value": 19}
 ];
 Morris.Line({
   element: 'graph',
